--- a/public/styles/extrem.css
+++ b/public/styles/extrem.css
@@ -1,20 +1,83 @@
-/* home index*/
+/* ----------------------------------------------------------home index*/
 
 body {
 	width: 100%;
 	height: 100%;
-	background: url('../img/african.jpg') no-repeat fixed center right;
+	/*background: url('../img/campamento.jpg') no-repeat fixed center;*/
+	background-color: #222;
+}
+.wrap-home {
+	background: url('../img/campamento.jpg') no-repeat fixed center;
+	height: 800px;
+}
+.wrap-adventures {
+	background: url('../img/african.jpg') no-repeat fixed center;
+	height: 800px;
+}
+.wrap-create {
+	background: url('../img/terminal.jpg') fixed center;
+	height: 800px;
 }
 
+/*clase londrina para asignar la tipo*/
+.londrina {
+	font-family: 'Londrina Outline', cursive;
+}
+/*titulo*/
 #imghome {
 	margin: 1em;
-	/*background-color: #222;*/
-	opacity: .7;
+	opacity: .5;
 	border-radius: 4px;
+	border: none;
 
 }
 
 #imghome h1 {
+	background-color: #222;
 	opacity: 1;
 	font-size: 7em;
+	color: white;
+	text-align: center;
 }
+
+/*boton home*/
+
+.boton {
+	width: 350px;
+	margin: 6em auto;
+	-moz-box-shadow: 2px 1px 29px #000000;
+	-webkit-box-shadow: 2px 1px 29px #000000;
+	box-shadow: 2px 1px 29px #000000;
+	padding: 1em;
+	border-radius: 5px;
+
+}
+.boton a {
+	 margin-top: 1em;
+	-moz-box-shadow: 2px 1px 29px #000000;
+	-webkit-box-shadow: 2px 1px 29px #000000;
+	box-shadow: 2px 1px 29px #000000;
+	
+}
+.boton button a {
+	text-decoration: none;
+}
+.vista {
+	z-index: 5;
+}
+/* titulo cabecera general */
+.cabecera {
+		/*position: fixed;*/
+		width: 100%;
+		height: 120px;
+		background-color: #222;
+		opacity: .7;
+	}
+.cabecera h1 {
+	margin: -1px;
+	color: white;
+	text-align: center;
+	font-size: 5em;
+	text-transform: uppercase;
+}
+
