--- a/public/templates/create-form2.html
+++ b/public/templates/create-form2.html
@@ -1,13 +1,9 @@
 <section>
-<style>
-	
-
-</style>
-	<div class="small-12 columns"><h4 class="subheader">{{formu1}}</h4></div>
+	<div class="small-12 columns"><h4 class="subheader">{{formu2}}</h4></div>
 	<div class="row">
     <div class="small-10 small-offset-1 columns">
-      <label>Name
-        <input type="text" placeholder="Adventure name" ng-model="form.nombre"/>
+      <label>Duration
+        <input type="number" size="4" placeholder="number of weeks" ng-model="form.weeks"/>
       </label>
     </div>
   </div>
