view create-form2 fixed

--- a/public/templates/create-form2.html
+++ b/public/templates/create-form2.html
@@ -15,6 +15,7 @@
     </div>
   </div>
   <div class="row text-center">
+  	<a id="boton" ng-click="iraFormUno()" class="button tiny alert radius"><i class="fa fa-arrow-circle-left"></i> Back</a>
   	<a id="boton" ng-click="iraFormDos()" class="button tiny radius">Next <i class="fa fa-arrow-circle-right"></i></a>
   </div>
 </section>
