update create Adventure form and added backend model for 'adventure'

--- a/public/styles/extrem.css
+++ b/public/styles/extrem.css
@@ -88,7 +88,9 @@ body {
 	margin-top: 3em;
 	background-color: #222;
 	border-radius: 0 0 8px 8px;
-	height: 380px;
+	height: 100%;
+	min-height: 400px;
+	padding-bottom: 2em;
 	overflow: hidden;
 	padding-bottom: 2em;	
 }
