--- a/public/templates/create-form1.html
+++ b/public/templates/create-form1.html
@@ -14,7 +14,7 @@
   <div class="row">
     <div class="small-10 small-offset-1 columns">
       <label>Description
-        <textarea rows="3" placeholder="Amazing experience..." ng-model="form.desc"></textarea>
+        <textarea rows="3" placeholder="Amazing experience..." ng-model="form.descrip"></textarea>
       </label>
     </div>
   </div>
