form and $scope

--- a/public/templates/create-form1.html
+++ b/public/templates/create-form1.html
@@ -7,14 +7,14 @@
 	<div class="row">
     <div class="small-10 small-offset-1 columns">
       <label>Name
-        <input type="text" placeholder="Adventure name" ng-model="form.nombre"/>
+        <input type="text" placeholder="Adventure name" ng-model="nombre"/>
       </label>
     </div>
   </div>
   <div class="row">
     <div class="small-10 small-offset-1 columns">
       <label>Description
-        <textarea rows="3" placeholder="Amazing experience..." ng-model="form.descrip"></textarea>
+        <textarea rows="3" placeholder="Amazing experience..." ng-model="descrip"></textarea>
       </label>
     </div>
   </div>
