--- a/public/styles/extrem.css
+++ b/public/styles/extrem.css
@@ -89,15 +89,29 @@ body {
 	background-color: #222;
 	border-radius: 0 0 8px 8px;
 	height: 100%;
-	min-height: 400px;
+	min-height: 380px;
 	padding-bottom: 2em;
 	overflow: hidden;
 	padding-bottom: 2em;	
 }
-#formu h1 {
+#formu1 {
+	margin-top: 3em;
+	background-color: #222;
+	border-radius: 0 0 8px 8px;
+	height: 400px;
+	padding-bottom: 2em;
+	overflow: hidden;
+	padding-bottom: 2em;
+}
+#formu h1, #formu1 h1 {
 	width: 100%;
 	color: white;
 }
+
+#btn_formu {
+	margin-top: 7em;
+}
+
 #menu-create {
 	margin-top: -50px;
 }
@@ -106,3 +120,6 @@ body {
 	margin-top: 2em;
 }
 
+#keywords {
+
+}
