--- a/public/templates/create-form3.html
+++ b/public/templates/create-form3.html
@@ -1,7 +1,12 @@
-<section>
+<style>
+	.espacio {
+		margin-top: 6em;
+	}
+</style>
+<section class="espacio">
 	<div class="row">
 		<div class="small-4 small-offset-4 text-center">
-			<button type="button" class="alert radius">back</button>
+			<a ui-sref="create.datos2" class="alert radius">back</a>
 		</div>
 	</div>
 	<div class="row">	
