--- a/public/templates/create-form1.html
+++ b/public/templates/create-form1.html
@@ -5,16 +5,16 @@
 </style>
 	<div class="small-12 columns"><h4 class="subheader">{{formu1}}</h4></div>
 	<div class="row">
-    <div class="small-10 small-offset-1 columns">
+    <div class="small-10 small-offset-1 columns radius">
       <label>Name
-        <input type="text" placeholder="Adventure name" ng-model="formData.nombre"/>
+        <input class="radius" type="text" placeholder="Adventure name" ng-model="formData.nombre"/>
       </label>
     </div>
   </div>
   <div class="row">
     <div class="small-10 small-offset-1 columns">
       <label>Description
-        <textarea rows="3" placeholder="Amazing experience..." ng-model="formData.descrip"></textarea>
+        <textarea class="radius" rows="3" placeholder="Amazing experience..." ng-model="formData.descrip"></textarea>
       </label>
     </div>
   </div>
