--- a/public/templates/create-form3.html
+++ b/public/templates/create-form3.html
@@ -1,17 +1,14 @@
-<style>
-	.espacio {
-		margin-top: 6em;
-	}
-</style>
+
 <section class="espacio">
 	<div class="row">
 		<div class="small-4 small-offset-4 text-center">
-			<a ui-sref="create.datos2" class="alert radius">back</a>
+			<a ui-sref="create.datos2" class="button tiny alert radius"><i class="fa fa-arrow-circle-left"></i> back</a>
 		</div>
 	</div>
 	<div class="row">	
-		<div class="small-4 small-offset-4 text-center">
-			<button type="submit" class="default radius expand">Submit data</button>
+		<div class="small-6 small-offset-3 text-center">
+		<br/>
+			<button type="submit" class="default radius expand"><i class="fa fa-flash"></i> Submit data</button>
 		</div>
 	</div>
 </section>
