--- a/public/templates/create-form1.html
+++ b/public/templates/create-form1.html
@@ -19,6 +19,6 @@
     </div>
   </div>
   <div class="row text-center">
-  <a id="boton" ui-sref="create.datos2" class="button tiny radius">Next <i class="fa fa-arrow-circle-right"></i></a>
+  <a id="boton" ui-sref="create.datos2" class="button tiny radius skew-forward">Next <i class="fa fa-arrow-circle-right"></i></a>
   </div>
 </section>
