--- a/public/templates/create-form2.html
+++ b/public/templates/create-form2.html
@@ -40,8 +40,8 @@
     </ul>
     </div>
     <div class="small-6 columns text-center">
-      <a id="boton" ui-sref="create.datos" class="button tiny alert radius"><i class="fa fa-arrow-circle-left"></i> Back</a>
-      <a id="boton" ui-sref="create.datos3" class="button tiny radius">Next <i class="fa fa-arrow-circle-right"></i></a>
+      <a id="boton" ui-sref="create.datos" class="button tiny alert radius skew-backward"><i class="fa fa-arrow-circle-left"></i> Back</a>
+      <a id="boton" ui-sref="create.datos3" class="button tiny radius skew-forward">Next <i class="fa fa-arrow-circle-right"></i></a>
     </div>
 
 
