--- a/public/styles/extrem.css
+++ b/public/styles/extrem.css
@@ -86,6 +86,19 @@ body {
 	font-size: 5em;
 	text-transform: uppercase;
 }
+.cabecera-peque {
+	width:100%;
+	height: 70px;
+	background-color: #222;
+	opacity: .7;
+}
+.cabecera-peque h3 {
+	margin:-1px;
+	color:white;
+	text-align:center;
+	text-transform: uppercase;
+	font-size: 2.8em;
+}
 
 
 /*--------------------------------------------------------- vista create  */
@@ -127,4 +140,59 @@ body {
 
 #keywords {
 
+}
+
+/*------------------------ VISTA adventures.html LISTAR TODAS*/
+
+.barra {
+
+	background-color: rgba(0,0,0,.4);
+	padding: 1em;
+}
+.aventura_una {
+	background-color: white;
+	float:left;
+	margin:1em;
+	position:relative;
+	width: 150px;
+	overflow:hidden;
+}
+.aventura_una h4, .aventura_una p {
+	color:white;
+	text-align: right;
+	overflow: hidden;
+}
+.espacio2em {
+	margin-top: 2em;
+}
+.aventura_una img {
+	position:relative;
+	
+	max-width: 200%;
+	height: 200px;
+	width: 180%;
+	-webkit-transition:1s ease;
+	opacity: .5;
+}
+.aventura_una img:hover  {
+	-webkit-transform:translate(-50px,0px);
+	opacity:1;
+}
+.datos_una:hover {
+	-webkit-transform:translate(0px,-30px);
+	opacity: 1;	
+}
+
+.aventura_una .datos_una {
+	position:absolute;
+	z-index: 5;
+	bottom: 0px;
+	right: 0px;
+	-webkit-transition:1s ease;
+
+}
+figcaption {
+	background-color: rgba(0,0,0,.4);
+	padding:.5em;
+	width: 100%;
 }
