--- a/public/templates/adventures.html
+++ b/public/templates/adventures.html
@@ -1,5 +1,5 @@
 <style>
-	a {
+a {
   text-decoration: none;
   color: #f2f2f2;
 }
@@ -8,8 +8,8 @@
 	border:solid black 1px;
 	float:left;
 	margin:1em;
-  	width: 150px;
-  	height: 200px;
+  	width: 130px;
+  	height: 180px;
   	overflow: hidden;
   	background-color: rgba(0,0,5,.5);
   	position: relative;
@@ -36,46 +36,46 @@
 
   }
 
-    .event a span {
-      display: block;
-      width: 100%;
-      height: 100%;
-      position: absolute;
-      top: 210px;
-      left: 0;
-      padding: 20px;
-      background-color: rgba(0,0,5,.7);
-      
-      -webkit-transition: all .5s ease .3s;
-         -moz-transition: all .5s ease .3s;
-          -ms-transition: all .5s ease .3s;
-           -o-transition: all .5s ease .3s;
-              transition: all .5s ease .3s;
-    }
+.event a span {
+  display: block;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 210px;
+  left: 0;
+  padding: 20px;
+  background-color: rgba(0,0,5,.7);
+  
+  -webkit-transition: all .5s ease .3s;
+     -moz-transition: all .5s ease .3s;
+      -ms-transition: all .5s ease .3s;
+       -o-transition: all .5s ease .3s;
+          transition: all .5s ease .3s;
+}
 
-    .event a:hover span,
-    .event a:focus span {
-      top: 110px;
-      left: 0;
-    }
-	img {
-		position:relative;
-		max-width: 200%;
-		height: 200px;
-		width: 180%;
-		-webkit-transition:3s ease;
-		opacity: 1;
-	}
-	img:hover {
-		-webkit-transform:translate(-50px,0px);
-	}
-	h4 {
-		color: white;
-		background-color: rgba(0,0,0,.3);
-		width: 100%;
-		margin:-8px;
-		padding:.4em;
-	}
+.event a:hover span,
+.event a:focus span {
+  top: 110px;
+  left: 0;
+}
+img {
+	position:relative;
+	max-width: 200%;
+	height: 200px;
+	width: 180%;
+	-webkit-transition:3s ease;
+	opacity: 1;
+}
+img:hover {
+	-webkit-transform:translate(-50px,0px);
+}
+h4 {
+	color: white;
+	background-color: rgba(0,0,0,.3);
+	width: 100%;
+	margin:-8px;
+	padding:.4em;
+}
 </style>
 <section class="wrap-adventures">
 
@@ -86,12 +86,10 @@
 		<h3 class="londrina">Our Adventures</h3>
 	</div>
 	<div class="espacio2em"></div>
-
-
-
+	
 	<div class="row">
-		<div id="barra" class="small-2 columns barra">Barra Lateral</div>
-		<div class="small-9 small-offset-1 columns barra">
+		<div id="barra" class="small-2 columns">Barra Lateral</div>
+		<div id="todas" class="small-9 small-offset-1 columns">
 			<section ng-repeat="una in todas" id="events">
 				
 			    <div class="event campa">
@@ -100,7 +98,7 @@
 			      	<h4>{{una.nombre}}</h4>
 			        
 			        <span>
-			        <button class="button expand">Vamonoss</button>
+			        <button class="button tiny">Vamonoss</button>
 						
 			         <!-- Location: Seville<br />
 			          Where?: Isla de la Cartuja<br />
