--- a/public/templates/create-form1.html
+++ b/public/templates/create-form1.html
@@ -4,22 +4,29 @@
 .espe {
   margin-right:2.5em;
 }
+.subheader {
+  margin-left: 2em;
+}
 </style>
-	<div class="small-12 columns"><h4 class="subheader">{{formu1}}</h4></div>
+	<div class="small-11 columns"><h4 class="subheader">{{formu1}}</h4></div>
 	<div class="row">
-    <div class="small-4 small-offset-1 columns radius">
+    <div class="small-5 small-offset-1 medium-5 medium-offset-1 large-5 large-offset-1 columns radius">
       <label>Name
-        <input class="radius" type="text" placeholder="Adventure name" ng-model="formData.nombre"/>
+        <input class="radius expand" type="text" placeholder="Adventure name" ng-model="formData.nombre"/>
       </label>
     </div>
-    <div class="small-4 small-offset-1 columns espe">
-      <label>Especialidad
-      <input type="text" class="radius" ng.model="formData.especialidad">
+    <div class="small-4 medium-4 large-4 columns espe" style="float:left;">
+      <label>Dificultad
+      <select name="" id="" class="radius expand" ng-model="formData.dificultad">
+        <option value="campa">Extrem</option>
+        <option value="medium">Medium</option>
+        <option value="facil">Easy</option>
+      </select>
       </label>  
     </div>
   </div>
   <div class="row">
-    <div class="small-10 small-offset-1 columns">
+    <div class="small-9 small-offset-1 columns">
       <label>Description
         <textarea class="radius" rows="3" placeholder="Amazing experience..." ng-model="formData.descrip"></textarea>
       </label>
